# Vanish-py

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml
docs/superpowers/plans/: 2026-07-10-seam-carving.md
docs/superpowers/specs/: 2026-07-10-seam-carving-design.md
examples/: benchmark.py  make_comparison.py  make_hero_gif.py  make_removal_demo.py  make_seam_overlay.py
examples/assets/: _make_synthetic.py
tests/: test_api.py  test_carver.py  test_cli.py  test_core.py  test_features.py  test_io.py  test_naive.py
vanish/: __init__.py  __main__.py  _naive.py  carver.py  cli.py  core.py  features.py  io.py
