[project]
name = "vanish"
version = "0.1.0"
description = "Content-aware image resizing via seam carving"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "pillow>=10.0"]

[project.optional-dependencies]
examples = ["imageio>=2.31"]
dev = ["pytest>=7.4", "imageio>=2.31"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vanish*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
